--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
                         <h3 class="Curday">Friday</h3>
                         <p class="text-gray">
                         <div id="Wdata"><span class="weather-date">15 April</span>, <span class="time">02:10</span> |
-                            <span class="weather-location">Warsaw,
-                                Poland</span>
+                            <span class="weather-location">Warsaw</span>
                         </div>
                         </p>
                     </div>
@@ -43,38 +42,10 @@
                                 <button class="fahrenheit"><span>F</span></button>
                             </h4>
                             <p id="sky"> Cloudy </p>
-                        </div>
-                    </div>
-                    <div class="card-body p-3">
-                        <div class="d-flex weakly-weather">
-                            <div class="weakly-weather-item">
-                                <p class="mb-1"> Sun </p> <i class="fab fa-cloudflare"></i>
-                                <p class="mb-0"> 30° </p>
-                            </div>
-                            <div class="weakly-weather-item">
-                                <p class="mb-1"> Mon </p> <i class="fas fa-smog"></i>
-                                <p class="mb-0"> 31° </p>
-                            </div>
-                            <div class="weakly-weather-item">
-                                <p class="mb-1"> Tue </p> <i class="fas fa-cloud-sun"></i>
-                                <p class="mb-0"> 28° </p>
-                            </div>
-                            <div class="weakly-weather-item">
-                                <p class="mb-1"> Wed </p> <i class="fas fa-bolt"></i>
-                                <p class="mb-0"> 30° </p>
-                            </div>
-                            <div class="weakly-weather-item">
-                                <p class="mb-1"> Thu </p> <i class="fas fa-water"></i>
-                                <p class="mb-0"> 29° </p>
-                            </div>
-                            <div class="weakly-weather-item">
-                                <p class="mb-1"> Fri </p> <i class="fas fa-cloud-sun-rain"></i>
-                                <p class="mb-0"> 31° </p>
-                            </div>
-                            <div class="weakly-weather-item">
-                                <p class="mb-1"> Sat </p> <i class="fas fa-sun"></i>
-                                <p class="mb-0"> 32° </p>
-                            </div>
+                            <p id="WindandOther">Wind: 55 km/hr
+                            <p id="humidity">Humidity: 90%</p>
+                            <p id="FeelsLike">Feels like: 50 or 210</p>
+                            </p>
                         </div>
                     </div>
                 </div>
