--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <div class="info">
         <p class="creator"><a href="https://github.com/sofiadanaile/Weather.web-app" target="_blank">Open-source
-                project</a> created by <a href="https://www.linkedin.com/in/sofiiadanaile/" target="_blank">Sophie</a>
+                project</a> created by <a href="https://www.linkedin.com/in/sofiiadanaile/" target="_blank">Sophie</a> hosted on <a href="https://app.netlify.com/" target="_blank">Netlify</a>
         </p>
     </div>
 </body>
