--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="C:/Users/sofia/OneDrive/Рабочий стол/WeatherRepo/WeatherRepo/weatherController.js"></script>
-    <script src="C:/Users/sofia/OneDrive/Рабочий стол/WeatherRepo/WeatherRepo/Enums.js"></script>
+    <script src="weatherController.js"></script>
+    <script src="Enums.js"></script>
     <title>Weather App</title>
 </head>
 
