--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
                             </p>
                         </div>
                     </div>
+                    <div class="weather-forecast" id="weather-forecast">
+                        <div class="row">
+                            <div class="col-2">
+                                <div class="weather-forecast-day">Thu</div>
+                                <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="rain" width="70">
+                                <div class="weather-forecast-temperatures">
+                                    <span class="weather-forecast-temperature-max"> 18°C </span>
+                                    <span class="weather-forecast-temperature-min"> 12°C </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
