--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="rain" width="70">
                                 <div class="weather-forecast-temperatures">
                                     <span class="weather-forecast-temperature-max"> 18°C </span>
-                                    <span class="weather-forecast-temperature-min"> 12°C </span>
+                                    <span class="weather-forecast-temperature-min"> 12°C </span><br>
                                 </div>
                             </div>
                         </div>
