--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body id="body">
     <div class="container">
+        <div id="search-form" class="mb-3">
         <div class="card">
             <div class="bg-image" style="background-image:url('https://wallpaperaccess.com/full/1778999.jpg')">
                 <div class="crad-body">
@@ -53,6 +54,7 @@
                 </div>
             </div>
         </div>
+    </form>
     </div>
     <div class="info">
         <p class="creator"><a href="https://github.com/sofiadanaile/WeatherWeb" target="_blank">Open-source
